--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -1,13 +1,41 @@
 apiVersion: cloudnativetoolkit.dev/v1alpha1
 kind: BillOfMaterial
 metadata:
-  name: my-ibm-vpc-roks
+  name: my-ibm-vpc-roks-argocd
+  labels:
+    type: software
+    code: '200'
+  annotations:
+    displayName: OpenShift GitOps Bootstrap
+    description: Provisions OpenShift GitOps (ArgoCD) into an existing cluster and bootstraps it to a gitops repository
 spec:
   modules:
+    # Virtual Private Cloud
     - name: ibm-vpc
     - name: ibm-vpc-subnets
     - name: ibm-vpc-gateways
+    # ROKS
     - name: ibm-ocp-vpc
       variables:
         - name: worker_count
-          value: 1
+          value: 1  
+    # Login to existing OpenShift cluster
+    - name: ocp-login
+    # Create the GitOps Repo
+    - name: gitops-repo
+    # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD)
+    - name: argocd-bootstrap
+      variables:
+        - name: create_webhook
+          value: true
+        - name: prefix
+          value: maximo
+    # Define namespace for the cloud native toolkit
+    - name: gitops-namespace
+      alias: toolkit_namespace
+      default: true
+      variables:
+        - name: name
+          value: toolkit
+    - name: gitops-cluster-config
+    - name: gitops-console-link-job
