update for third approach

--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -6,12 +6,37 @@ spec:
   modules:
     # Virtual Private Cloud
     - name: ibm-vpc
+      variables:
+      - name: ibm-vpc_name
+        value: "tsued-gitops-sample"
     - name: ibm-vpc-subnets
+      variables:
+      - name: ibm-vpc-subnets_label
+        value: "tsued-gitops-sample"
+      - name: ibm-vpc-subnets__count
+        value: 1
     - name: ibm-vpc-gateways
     # ROKS
     - name: ibm-ocp-vpc
       variables:
+        - name: cluster_name
+          value: "tsued-gitops-sample"
         - name: worker_count
-          value: 1
+          value: 2
+        - name: region
+          value: "eu-de" 
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD)
     - name: argocd-bootstrap
+      variables:
+        - name: gitops_repo_username
+          value: "thomassuedbroecker"
+        - name: gitops_repo_token
+        - name: gitops_repo_type
+          value: "GIT"
+        - name: gitops_repo_host
+          value: "github.com"
+        - name: gitops_repo_project
+          value: "iascable-vpc-openshift-argocd-gitops"
+        - name: gitops_repo_server_name
+          value: "tsued-gitops-sample"
+          
