--- a/example/output/my-ibm-vpc-roks-argocd/bom.yaml
+++ b/example/output/my-ibm-vpc-roks-argocd/bom.yaml
@@ -7,26 +7,50 @@ spec:
     - name: argocd-bootstrap
       alias: argocd-bootstrap
       version: v1.12.0
+      variables:
+        - name: gitops_repo_username
+          value: thomassuedbroecker
+        - name: gitops_repo_token
+        - name: gitops_repo_type
+          value: GIT
+        - name: gitops_repo_host
+          value: github.com
+        - name: gitops_repo_project
+          value: iascable-vpc-openshift-argocd-gitops
+        - name: gitops_repo_server_name
+          value: tsued-gitops-sample
     - name: ibm-ocp-vpc
       alias: cluster
       version: v1.15.4
       variables:
+        - name: cluster_name
+          value: tsued-gitops-sample
         - name: worker_count
-          value: 1
+          value: 2
+        - name: region
+          value: eu-de
     - name: ibm-vpc
       alias: ibm-vpc
       version: v1.16.0
+      variables:
+        - name: ibm-vpc_name
+          value: tsued-gitops-sample
     - name: ibm-vpc-gateways
       alias: ibm-vpc-gateways
       version: v1.9.0
     - name: ibm-vpc-subnets
       alias: ibm-vpc-subnets
       version: v1.13.2
+      variables:
+        - name: ibm-vpc-subnets_label
+          value: tsued-gitops-sample
+        - name: ibm-vpc-subnets__count
+          value: 1
     - name: olm
       version: v1.3.2
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.20.0
+      version: v1.20.1
     - name: sealed-secret-cert
       version: v1.0.1
     - name: ibm-resource-group
@@ -36,9 +60,6 @@ spec:
       alias: cos
       version: v4.0.3
   variables:
-    - name: region
-      type: string
-      description: The IBM Cloud region where the cluster will be/has been installed.
     - name: ibmcloud_api_key
       type: string
       description: The IBM Cloud api token
@@ -47,7 +68,7 @@ spec:
       description: >-
         The number of worker nodes that should be provisioned for classic
         infrastructure
-      defaultValue: 1
+      defaultValue: 2
     - name: cluster_flavor
       type: string
       description: The machine type that will be provisioned for classic infrastructure
