--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -38,7 +38,7 @@ spec:
         - name: gitops_repo_repo
           value: "iascable-vpc-openshift-argocd-gitops"
         - name: gitops_repo_project
-          value: "iascable-vpc-openshift-argocd-gitops"
+          value: "https://github.com/thomassuedbroecker/iascable-vpc-openshift-argocd-gitops"
         - name: gitops_repo_server_name
           value: "tsued-gitops-sample"
           
