--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -6,8 +6,10 @@ spec:
   modules:
     # Virtual Private Cloud - related
     - name: ibm-vpc
+      alias: ibm-vpc
+      version: v1.16.0
       variables:
-      - name: ibm-vpc_name
+      - name: name
         value: "tsued-gitops-sample"
     - name: ibm-vpc-subnets
       alias: ibm-vpc-subnets
@@ -15,32 +17,49 @@ spec:
       variables:
         - name: _count
           value: 1
-        - name: _label
+        - name: name
           value: "tsued-gitops-sample"
     - name: ibm-vpc-gateways
     # ROKS - related
     - name: ibm-ocp-vpc
+      alias: ibm-ocp-vpc
+      version: v1.15.5
       variables:
         - name: cluster_name
           value: "tsued-gitops-sample"
         - name: worker_count
           value: 2
         - name: region
-          value: "eu-de" 
+          value: "eu-de"
+    - name: ibm-object-storage
+      alias: ibm-object-storage
+      version: v4.0.3
+      variables:
+        - name: name
+          value: "cos-tsued-gitops-sample"
+        - name: resource_location
+          value: "gobal"
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD) - related
     - name: argocd-bootstrap
+      alias: argocd-bootstrap
+      version: v1.12.0
       variables:
-        - name: gitops_repo_username
-          value: "thomassuedbroecker"
-        - name: gitops_repo_org
-          value: "thomassuedbroecker"
-        - name: gitops_repo_token
-        - name: gitops_repo_type
-          value: "GIT"
-        - name: gitops_repo_host
+        - name: repo_token
+    - name: gitops-repo
+      alias: gitops-repo
+      version: v1.20.2
+      variables:
+        - name: host
           value: "github.com"
-        - name: gitops_repo_repo
+        - name: type
+          value: "GIT"
+        - name: org
+          value: "thomassuedbroecker"
+        - name: project
           value: "iascable-gitops"
-        - name: gitops_repo_server_name
-          value: "tsued-gitops-sample"
+        - name: repo
+          value: "iascable-gitops"
+
+
+        
           
