--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   modules:
     # Virtual Private Cloud - related
+    # - subnets
+    # - gateways
     - name: ibm-vpc
       alias: ibm-vpc
       version: v1.16.0
@@ -21,6 +23,7 @@ spec:
           value: "tsued-gitops-sample"
     - name: ibm-vpc-gateways
     # ROKS - related
+    # - objectstorage
     - name: ibm-ocp-vpc
       alias: ibm-ocp-vpc
       version: v1.15.5
@@ -39,7 +42,11 @@ spec:
           value: "cos-tsued-gitops-sample"
         - name: resource_location
           value: "gobal"
+        - name: resource_group_name
+          value: "default" 
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD) - related
+    # - argocd
+    # - gitops
     - name: argocd-bootstrap
       alias: argocd-bootstrap
       version: v1.12.0
