--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -13,6 +13,10 @@ spec:
       variables:
       - name: name
         value: "tsued-gitops-sample"
+      - name: tags
+        value: ["tsuedro"]
+      - name: region
+        value: "eu-de"
     - name: ibm-vpc-subnets
       alias: ibm-vpc-subnets
       version: v1.13.2
@@ -21,6 +25,8 @@ spec:
           value: 1
         - name: name
           value: "tsued-gitops-sample"
+        - name: tags
+          value: ["tsuedro"]
     - name: ibm-vpc-gateways
     # ROKS - related
     # - objectstorage
@@ -34,6 +40,8 @@ spec:
           value: 2
         - name: region
           value: "eu-de"
+        - name: tags
+          value: ["tsuedro"]
     - name: ibm-object-storage
       alias: ibm-object-storage
       version: v4.0.3
@@ -43,7 +51,9 @@ spec:
         - name: resource_location
           value: "gobal"
         - name: resource_group_name
-          value: "default" 
+          value: "default"
+        - name: tags
+          value: ["tsuedro"]
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD) - related
     # - argocd
     # - gitops
