--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -72,6 +72,8 @@ spec:
           value: "GIT"
         - name: org
           value: "thomassuedbroecker"
+        - name: username
+          value: "thomassuedbroecker"
         - name: project
           value: "iascable-gitops"
         - name: repo
