--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -28,6 +28,17 @@ spec:
         - name: tags
           value: ["tsuedro"]
     - name: ibm-vpc-gateways
+      alias: ibm-vpc-gateways
+      version: v1.9.0
+      variables:
+        - name: region
+          value: "eu-de"      
+    - name: ibm-resource-group
+      alias: ibm-resource-group
+      version: v3.3.0
+      variables:
+      - name: resource_group_name
+        value: "default"
     # ROKS - related
     # - objectstorage
     - name: ibm-ocp-vpc
@@ -47,13 +58,15 @@ spec:
       version: v4.0.3
       variables:
         - name: name
-          value: "cos-tsued-gitops-sample"
-        - name: resource_location
-          value: "gobal"
+          value: "cos_tsued_gitops"
         - name: resource_group_name
           value: "default"
         - name: tags
           value: ["tsuedro"]
+        - name: label
+          value: ["cos_tsued"]
+        #- name: resource_location
+        #  value: "gobal"
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD) - related
     # - argocd
     # - gitops
