--- a/example/my-vpc-roks-argocd-bom.yaml
+++ b/example/my-vpc-roks-argocd-bom.yaml
@@ -15,8 +15,8 @@ spec:
         value: "tsued-gitops-sample"
       - name: tags
         value: ["tsuedro"]
-      - name: region
-        value: "eu-de"
+    #  - name: region
+    #    value: "eu-de"
     - name: ibm-vpc-subnets
       alias: ibm-vpc-subnets
       version: v1.13.2
@@ -28,17 +28,17 @@ spec:
         - name: tags
           value: ["tsuedro"]
     - name: ibm-vpc-gateways
-      alias: ibm-vpc-gateways
-      version: v1.9.0
-      variables:
-        - name: region
-          value: "eu-de"      
-    - name: ibm-resource-group
-      alias: ibm-resource-group
-      version: v3.3.0
-      variables:
-      - name: resource_group_name
-        value: "default"
+      # alias: ibm-vpc-gateways
+      # version: v1.9.0
+      # variables:
+        # - name: region
+        #   value: "eu-de"      
+    # - name: ibm-resource-group
+    #  alias: ibm-resource-group
+    #  version: v3.3.0
+    #  variables:
+    #  - name: resource_group_name
+    #    value: "default"
     # ROKS - related
     # - objectstorage
     - name: ibm-ocp-vpc
@@ -46,25 +46,25 @@ spec:
       version: v1.15.5
       variables:
         - name: cluster_name
-          value: "tsued-gitops-sample"
+          value: "tsued-gitops"
         - name: worker_count
           value: 2
-        - name: region
-          value: "eu-de"
         - name: tags
           value: ["tsuedro"]
+        # - name: region
+        #  value: "eu-de"
     - name: ibm-object-storage
       alias: ibm-object-storage
       version: v4.0.3
       variables:
         - name: name
           value: "cos_tsued_gitops"
-        - name: resource_group_name
-          value: "default"
         - name: tags
           value: ["tsuedro"]
         - name: label
           value: ["cos_tsued"]
+        # - name: resource_group_name
+        #   value: "default"
         #- name: resource_location
         #  value: "gobal"
     # Install OpenShift GitOps and Bootstrap GitOps (aka. ArgoCD) - related
